--- a/formation-webpage/src/app/app.component.html
+++ b/formation-webpage/src/app/app.component.html
@@ -4,27 +4,44 @@
       opened=true mode="side" position="start"
       (openedStart)="onPositionBarOpen()" (closedStart)="onPositionBarClose()">
       <div class="teamPanels">
-        <mat-expansion-panel>
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              Offense
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-        </mat-expansion-panel>
-        <mat-expansion-panel>
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              Defense
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-        </mat-expansion-panel>
-        <mat-expansion-panel>
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              Special Teams
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-        </mat-expansion-panel>
+        <mat-accordion multi="false">
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                Offense
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <mat-list class="positionList" dense>
+                <mat-list-item 
+                  *ngFor="let Position of getOffensivePlayers()">{{Position.name}}
+                </mat-list-item> 
+            </mat-list>
+          </mat-expansion-panel>
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                Defense
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <mat-list class="positionList" dense>
+              <mat-list-item 
+                *ngFor="let Position of getDefensivePlayers()">{{Position.name}}
+              </mat-list-item> 
+            </mat-list>
+          </mat-expansion-panel>
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                Special Teams
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <mat-list class="positionList" dense>
+              <mat-list-item 
+                *ngFor="let Position of getSpecialTeamsPlayers()">{{Position.name}}
+              </mat-list-item> 
+            </mat-list>
+          </mat-expansion-panel>
+        </mat-accordion>
       </div>
     </mat-sidenav>
     <mat-sidenav-content>
@@ -45,11 +62,12 @@
         </div>
       </div>
     </mat-sidenav-content>
+    
     <mat-sidenav #detailBar class="detailNavBar"
       opened=true mode="side" position="end"
       (openedStart)="onDetailBarOpen()" (closedStart)="onDetailBarClose()">
-      <div class="detailTabs">
-        <mat-tab-group>
+      <div>
+        <mat-tab-group class="detailTabs">
           <mat-tab label="Properties">
             Properties Tab
           </mat-tab>
