--- a/formation-webpage/src/app/app.component.html
+++ b/formation-webpage/src/app/app.component.html
@@ -13,6 +13,7 @@
             </mat-expansion-panel-header>
             <mat-list class="positionList" dense>
                 <mat-list-item 
+                  (click)="handlePositionClick($event)"
                   *ngFor="let Position of getOffensivePlayers()">{{Position.name}}
                 </mat-list-item> 
             </mat-list>
