--- a/formation-webpage/src/app/app.component.css
+++ b/formation-webpage/src/app/app.component.css
@@ -23,6 +23,15 @@ mat-sidenav-container{
     /* width: 25%; */
 }
 
+.positionClass{
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .positionBarToggle{
     position: absolute;
     top: 50%;
