--- a/formation-webpage/src/app/app.component.html
+++ b/formation-webpage/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div class="main">
-  <mat-sidenav-container>
+<div class="main" (mousemove)="mousemove($event)">
+  <mat-sidenav-container (mouseup)="mouseup($event.x, $event.y, field.getBoundingClientRect())">
+    <!-- <div #fieldContent> -->
     <mat-sidenav #positionBar class="positionNavBar" 
       opened=true mode="side" position="start"
       (openedStart)="onPositionBarOpen()" (closedStart)="onPositionBarClose()">
@@ -12,9 +13,10 @@
               </mat-panel-title>
             </mat-expansion-panel-header>
             <mat-list class="positionList" dense>
-                <mat-list-item 
-                  (click)="handlePositionClick($event)"
-                  *ngFor="let Position of getOffensivePlayers()">{{Position.name}}
+                <mat-list-item #positionClass class="positionClass"
+                  (mousedown)="mousedown(position)"
+                  (mouseup)="mouseup()"
+                  *ngFor="let position of getOffensivePlayers()">{{position.name}}
                 </mat-list-item> 
             </mat-list>
           </mat-expansion-panel>
@@ -47,7 +49,7 @@
     </mat-sidenav>
     <mat-sidenav-content>
       <div class="content">
-        <div class="field">
+        <div #field class="field">
           <div class="version">
             <p>{{version}}</p>
           </div>
@@ -63,7 +65,7 @@
         </div>
       </div>
     </mat-sidenav-content>
-    
+    <!-- </div> -->
     <mat-sidenav #detailBar class="detailNavBar"
       opened=true mode="side" position="end"
       (openedStart)="onDetailBarOpen()" (closedStart)="onDetailBarClose()">
