--- a/formation-webpage/src/app/position/displayposition/displayposition.component.html
+++ b/formation-webpage/src/app/position/displayposition/displayposition.component.html
@@ -1,3 +1,6 @@
-<p>
-  {{position.abbreviatedName}}
-</p>
+<div #displayPosition class="displayPosition"
+  (mousedown)="handleMouseDown()">
+  <p>
+    {{position.abbreviatedName}}
+  </p>
+</div>
