--- a/formation-webpage/src/app/app.component.css
+++ b/formation-webpage/src/app/app.component.css
@@ -1,86 +1,151 @@
 .main{
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.positionClass{
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.test2{
+  height: 25%;
+  width: 25%;
+  background-color: red;
+  position: absolute;
+  z-index: 1;
+}
+
+.main{
+  height: 100%;
+  width: 100%;
 }
 
 mat-sidenav-container{
-    height: 100%;
+  height: 100%;
 }
 
 .content{
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    position: relative;
-    flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  position: relative;
+  flex-direction: column;
 }
+/* Above is good */
 
 .positionNavBar{
 
 }
 
 .detailNavBar{
-    /* width: 25%; */
-}
-
-.positionClass{
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  width: 20%;
 }
 
 .positionBarToggle{
-    position: absolute;
-    top: 50%;
-    left: 0%;
+  position: absolute;
+  top: 50%;
+  left: 0%;
 }
 
 .detailBarToggle{
-    position: absolute;
-    top: 50%;
-    right: 0%;
+  position: absolute;
+  top: 50%;
+  right: 0%;
 }
 
 .field{
-    height: 95%;
-    width: 100%;
+  height: 95%;
+  width: 100%;
 }
 
 .validateButton{
-    padding: 0;
+  padding: 0;
 }
 
 .validateButtonTitle{
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .detailBar{
-    width: 100%;
-    display: grid;
-    grid-template-columns: auto 18% auto;
-    grid-template-rows: auto;
+  width: 100%;
+  display: grid;
+  grid-template-columns: auto 18% auto;
+  grid-template-rows: auto;
 }
 
 .formationName{
-    margin-left: auto;
-    margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .playName{
-    margin-left: auto;
-    margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .version{
-    z-index: -1;
-    padding: 0;
-    color: gray;
+  z-index: -1;
+  padding: 0;
+  color: gray;
 }
 
 .detailTabs{
-    
+  /* width: 100%; */
 }
+
+/*
+mat-sidenav-container{
+  height: 100%;
+}
+
+.container{
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+  position: absolute;
+}
+
+.detailBar{
+  width: 100%;
+  position: absolute;
+  display: grid;
+  grid-template-columns: auto 18% auto;
+  grid-template-rows: auto;
+}
+
+.field{
+  height: 95%;
+  width: 100%;
+  position: absolute;
+}
+
+.validateButton{
+  padding: 0;
+}
+
+.validateButtonTitle{
+  padding: 0;
+  margin: 0;
+}
+
+.detailBar{
+  width: 100%;
+  display: grid;
+  grid-template-columns: auto 18% auto;
+  grid-template-rows: auto;
+}
+
+.content{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+} */
