--- a/formation-webpage/src/app/position/displayposition/displayposition.component.css
+++ b/formation-webpage/src/app/position/displayposition/displayposition.component.css
@@ -1,5 +1,11 @@
 
 .displayPosition{
+  height: 25px;
+  width: 25px;
   user-select: none;
-  -webkit-user-select: none;
+  border: 2px solid gray;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
