--- a/formation-webpage/src/app/position/displayposition/displayposition.component.html
+++ b/formation-webpage/src/app/position/displayposition/displayposition.component.html
@@ -1,6 +1,6 @@
 <div #displayPosition class="displayPosition"
   (mousedown)="handleMouseDown()">
-  <p>
+  <span class="displayPositionTitle">
     {{position.abbreviatedName}}
-  </p>
+  </span>
 </div>
