--- a/formation-webpage/src/app/app.component.html
+++ b/formation-webpage/src/app/app.component.html
@@ -57,12 +57,12 @@
             <div class="version">
               {{version}}
             </div>
-            <button #positionBarToggle class="positionBarToggle" (click)="positionBar.toggle()">{{positionButtonToggle}}</button>
-            <button #detailBarToggle class="detailBarToggle" (click)="detailNavBar.toggle()">{{detailButtonToggle}}</button>
+            <button mat-raised-button #positionBarToggle class="positionBarToggle" (click)="positionBar.toggle()">{{positionButtonToggle}}</button>
+            <button mat-raised-button #detailBarToggle class="detailBarToggle" (click)="detailNavBar.toggle()">{{detailButtonToggle}}</button>
           </div>
           <div class="detailBar">
             <p class="formationName">Enter Formation Name Here</p>
-            <button class="validateButton" disabled>
+            <button mat-raised-button class="validateButton" disabled>
               <p class="validateButtonTitle">Validate</p>
             </button>
             <p class="playName">Enter Play Name Here</p>
