--- a/formation-webpage/src/app/app.component.css
+++ b/formation-webpage/src/app/app.component.css
@@ -13,12 +13,31 @@
   user-select: none;
 }
 
-.test2{
-  height: 25%;
-  width: 25%;
-  background-color: red;
-  position: absolute;
-  z-index: 1;
+.offensePanel{
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.defensePanel{
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.specialTeamsPanel{
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .main{
@@ -37,7 +56,6 @@ mat-sidenav-container{
   position: relative;
   flex-direction: column;
 }
-/* Above is good */
 
 .positionNavBar{
 
@@ -56,6 +74,12 @@ mat-sidenav-container{
 .detailBarToggle{
   position: absolute;
   top: 50%;
+  right: 0%;
+}
+
+.resetButton{
+  position: absolute;
+  top: 0%;
   right: 0%;
 }
 
@@ -95,58 +119,10 @@ mat-sidenav-container{
   padding-left: 5px;
   padding-top: 5px;
   color: gray;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-
-.detailTabs{
-  /* width: 100%; */
-}
-
-/*
-mat-sidenav-container{
-  height: 100%;
-}
-
-.container{
-  height: 100%;
-  width: 100%;
-  z-index: 0;
-  position: absolute;
-}
-
-.detailBar{
-  width: 100%;
-  position: absolute;
-  display: grid;
-  grid-template-columns: auto 18% auto;
-  grid-template-rows: auto;
-}
-
-.field{
-  height: 95%;
-  width: 100%;
-  position: absolute;
-}
-
-.validateButton{
-  padding: 0;
-}
-
-.validateButtonTitle{
-  padding: 0;
-  margin: 0;
-}
-
-.detailBar{
-  width: 100%;
-  display: grid;
-  grid-template-columns: auto 18% auto;
-  grid-template-rows: auto;
-}
-
-.content{
-  height: 100%;
-  width: 100%;
-  display: flex;
-  position: relative;
-  flex-direction: column;
-} */
