--- a/formation-webpage/src/app/app.component.css
+++ b/formation-webpage/src/app/app.component.css
@@ -84,12 +84,14 @@ mat-sidenav-container{
 }
 
 .field{
-  height: 95%;
+  height: 95vh;
   width: 100%;
+
 }
 
 .validateButton{
   padding: 0;
+  height: 5vh;
 }
 
 .validateButtonTitle{
@@ -99,9 +101,23 @@ mat-sidenav-container{
 
 .detailBar{
   width: 100%;
+  height: 5vh;
+  background-color: white;
+  left: 0;
+  bottom: 0;
+  position: absolute;
   display: grid;
   grid-template-columns: auto 18% auto;
   grid-template-rows: auto;
+}
+
+.grid{
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 95vh;
 }
 
 .formationName{
