--- a/formation-webpage/src/app/app.component.css
+++ b/formation-webpage/src/app/app.component.css
@@ -63,6 +63,7 @@ mat-sidenav-container{
 
 .detailNavBar{
   width: 20%;
+  position: absolute;
 }
 
 .positionBarToggle{
@@ -132,8 +133,11 @@ mat-sidenav-container{
 
 .version{
   z-index: -1;
-  padding-left: 5px;
-  padding-top: 5px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding-right: 5px;
+  padding-bottom: 5px;
   color: gray;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
