--- a/formation-webpage/src/app/app.component.html
+++ b/formation-webpage/src/app/app.component.html
@@ -5,50 +5,8 @@
       <mat-sidenav #positionBar class="positionNavBar"
       opened=true mode="side" position="start"
       (openedStart)="onPositionBarOpen()" (closedStart)="onPositionBarClose()">
-        <mat-accordion #positionHolder multi="false">
-          <mat-expansion-panel #offensePanel class="offensePanel">
-            <mat-expansion-panel-header>
-              <mat-panel-title>
-                Offense
-              </mat-panel-title>
-            </mat-expansion-panel-header>
-            <mat-list class="positionList" dense>
-                <mat-list-item #positionClass class="positionClass"
-                (mousedown)="mousedown($event, position)"
-                (mouseup)="mouseup()"
-                  *ngFor="let position of getOffensivePlayers()">{{position.name}}
-                </mat-list-item>
-            </mat-list>
-          </mat-expansion-panel>
-          <mat-expansion-panel #defensePanel class="defensePanel">
-            <mat-expansion-panel-header>
-              <mat-panel-title>
-                Defense
-              </mat-panel-title>
-            </mat-expansion-panel-header>
-            <mat-list class="positionList" dense>
-              <mat-list-item #positionClass class="positionClass"
-                (mousedown)="mousedown($event, position)"
-                (mouseup)="mouseup()"
-                *ngFor="let position of getDefensivePlayers()">{{position.name}}
-              </mat-list-item>
-            </mat-list>
-          </mat-expansion-panel>
-          <mat-expansion-panel #specialTeamsPanel class="specialTeamsPanel">
-            <mat-expansion-panel-header>
-              <mat-panel-title>
-                Special Teams
-              </mat-panel-title>
-            </mat-expansion-panel-header>
-            <mat-list class="positionList" dense>
-              <mat-list-item #positionClass class="positionClass"
-                (mousedown)="mousedown($event, position)"
-                (mouseup)="mouseup()"
-                *ngFor="let position of getSpecialTeamsPlayers()">{{position.name}}
-              </mat-list-item>
-            </mat-list>
-          </mat-expansion-panel>
-        </mat-accordion>
+      <app-positionbar #positionPanel
+        (positionSelected)="handlePositionSelected($event)"></app-positionbar>
       </mat-sidenav>
       <mat-sidenav-content>
         <div class="content">
