--- a/formation-webpage/src/app/detailbar/detailbar.component.css
+++ b/formation-webpage/src/app/detailbar/detailbar.component.css
@@ -1,16 +1,19 @@
 .version{
-    z-index: -1;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    padding-right: 5px;
-    padding-bottom: 5px;
-    color: gray;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-  
+  z-index: -1;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  color: gray;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.positionDetails {
+  visibility: hidden;
+}
