--- a/formation-webpage/src/app/app.component.html
+++ b/formation-webpage/src/app/app.component.html
@@ -18,6 +18,7 @@
             (detailBarToggled)="detailBar.toggle()"
             (resetButtonPressed)="handleReset()">
           </app-field>
+          <div #deletePosition class="deletePosition"></div>
         </div>
       </mat-sidenav-content>
       <mat-sidenav #detailBar class="detailNavBar"
