--- a/formation-webpage/src/app/detailbar/detailbar.component.html
+++ b/formation-webpage/src/app/detailbar/detailbar.component.html
@@ -5,15 +5,20 @@
     </h2>
   </div>
   <div #positionDetails class="positionDetails">
-    <mat-form-field>
-      <mat-label>Position</mat-label>
-      <mat-select
-        (selectionChange)="handlePositionChanged($event)"
-        [(value)]="highlightedPosition">
-        <mat-option 
-        *ngFor="let position of getAvailablePositions()" [value]="position">{{position.name}}</mat-option>
-      </mat-select>
-    </mat-form-field>
+    <div>
+      <mat-form-field>
+        <mat-label>Position</mat-label>
+        <mat-select
+          (selectionChange)="handlePositionChanged($event)"
+          [(value)]="highlightedPosition">
+          <mat-option 
+          *ngFor="let position of getAvailablePositions()" [value]="position">{{position.name}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div>
+      
+    </div>
   </div>
   <div class="version">
     {{version}}
