--- a/formation-webpage/src/app/detailbar/detailbar.component.css
+++ b/formation-webpage/src/app/detailbar/detailbar.component.css
@@ -16,4 +16,23 @@
 
 .positionDetails {
   visibility: hidden;
+  padding-left: 10px;
+}
+
+.locationHolder{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  /* height: auto; */
+}
+
+.locationHeader{
+  padding-right: 5px;
+  padding-bottom: 1px;
+}
+
+.locationInput{
+  padding-right: 5px;
+  padding-left: 5px;
+  width: 25px;
 }
