--- a/formation-webpage/src/app/detailbar/detailbar.component.html
+++ b/formation-webpage/src/app/detailbar/detailbar.component.html
@@ -16,8 +16,15 @@
         </mat-select>
       </mat-form-field>
     </div>
-    <div>
-      
+    <div class="locationHolder">
+      <h3 class="locationHeader">Location</h3>
+      <input matInput #xInput class="locationInput"
+        (change)="handleChange()"
+        [(value)]="xValue">
+      <h3>,</h3>
+      <input matInput #yInput class="locationInput"
+        (change)="handleChange()"
+        [(value)]="yValue">
     </div>
   </div>
   <div class="version">
