--- a/formation-webpage/src/app/detailbar/detailbar.component.css
+++ b/formation-webpage/src/app/detailbar/detailbar.component.css
@@ -31,10 +31,16 @@
   padding-bottom: 1px;
 }
 
-.locationInput{
-  /* margin-left: 10px; */
-  /* margin-right: 5px; */
-  /* margin-top: auto; */
-  /* margin-bottom: auto; */
-  /* width: auto; */
+.locationInputX{
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 5px;
+  padding-right: 3px;
+  width: 50px;
+}
+
+.locationInputY{
+  margin-top: auto;
+  margin-bottom: auto;
+  padding-left: 5px;
 }
