--- a/formation-webpage/src/app/field/field.component.html
+++ b/formation-webpage/src/app/field/field.component.html
@@ -1,6 +1,14 @@
 <div class="content">
   <div #field class="field"
     (click)="handleFieldClick($event)">
+    <div #ball cdkDrag
+    (cdkDragMoved)="handleBallDrag($event)"
+    (drag)="handleBallDrag($event)">
+      <span class="innerBall"></span>
+      <span class="ballStripe"></span>
+      <span class="leftBallRound"></span>
+      <span class="rightBallRound"></span>
+    </div>
     <div>
       <canvas #grid class="grid"></canvas>
     </div>
