--- a/formation-webpage/src/app/field/field.component.css
+++ b/formation-webpage/src/app/field/field.component.css
@@ -69,33 +69,15 @@
     margin-left: auto;
     margin-right: auto;
 }
-  
-.innerBall{
-    height: 17px;
-    width: 30px;
-    position: absolute;
-    top: 40%;
+
+.ball{
+    height: 20px;
+    width: 20px;
+    top: 50%;
     left: 50%;
+    position: absolute;
     background-color: #653403;
     border-radius: 50%;
-    display: inline-block;
-    /* transform: translate(-50%, -50%); */
-}
-
-/* .ballStripe{
-    height: 1px;
-    width: 26px;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    background-color: white;
     transform: translate(-50%, -50%);
+    display: inline-block;
 }
-
-.leftBallRound{
-
-}
-
-.rightBallRound{
-
-} */
