--- a/formation-webpage/src/app/field/field.component.html
+++ b/formation-webpage/src/app/field/field.component.html
@@ -1,11 +1,5 @@
 <div class="content">
-  <div #field class="field"
-    (click)="handleFieldClick($event)">
-    <div #ball class="ball" cdkDrag 
-    (cdkDragMoved)="handleBallDrag($event)"
-    (cdkDragReleased)="handleBallDragDropped($event)">
-      <!-- <span class="ball" cdkDrag (cdkDragMoved)="handleBallDrag()"></span> -->
-    </div>
+  <div #field class="field">
     <div>
       <canvas #grid class="grid"></canvas>
     </div>
