--- a/formation-webpage/src/app/detailbar/detailbar.component.css
+++ b/formation-webpage/src/app/detailbar/detailbar.component.css
@@ -36,11 +36,12 @@
   margin-bottom: auto;
   margin-left: 5px;
   padding-right: 3px;
-  width: 50px;
+  width: 50%;
 }
 
 .locationInputY{
   margin-top: auto;
   margin-bottom: auto;
   padding-left: 5px;
+  width: 50%;
 }
