Corrected Visual issues with position movements
Corrected Position X/Y being inverted on display
Corrected issue where releasing mouse in overlap zone caused the player to stay selected.

--- a/formation-webpage/src/app/app.component.html
+++ b/formation-webpage/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div #main class="main"
-  (mousemove)="handleMouseMove($event)">
+  (mousemove)="handleMouseMove($event)"
+  (mouseup)="phantomMouseUp()">
   <div #container class="container">
     <mat-sidenav-container>
       <mat-sidenav #positionBar class="positionNavBar"
