--- a/formation-webpage/src/app/app.component.html
+++ b/formation-webpage/src/app/app.component.html
@@ -17,7 +17,8 @@
             (fieldClicked)="handleFieldClick()"
             (positionBarToggled)="positionBar.toggle()"
             (detailBarToggled)="detailBar.toggle()"
-            (resetButtonPressed)="handleReset()">
+            (resetButtonPressed)="handleReset()"
+            (validatePressed)="handleValidation()">
           </app-field>
           <span #deletePosition class="deletePosition"></span>
         </div>
