Created Slot Registration System
Added Slot system. However it does fail when the ball is north of the players. It is currently hard coded to cardinal directions. This should be an easy enough fix once validation handles if the players are all on the same side of the ball.

--- a/formation-webpage/src/app/detailbar/detailbar.component.html
+++ b/formation-webpage/src/app/detailbar/detailbar.component.html
@@ -35,7 +35,7 @@
         <span class="locationYFooter"><h3>ft</h3></span>
     </div>
     <div class="slotHolder">
-      <h3>Slot</h3>
+      <span><h3>Slot {{slot}}</h3></span>
     </div>
   </div>
   <div class="version">
