Removed Ugly Blue Square
Replaced blue square with highlighting Trash Can. The highlight isn't perfect and doesn't handle adjustments well. We will get there

--- a/formation-webpage/src/app/app.component.html
+++ b/formation-webpage/src/app/app.component.html
@@ -20,7 +20,10 @@
             (resetButtonPressed)="handleReset()"
             (validatePressed)="handleValidation()">
           </app-field>
-          <span #deletePosition class="deletePosition"></span>
+          <div>
+            <img #deletePosition class="deletePosition" src="/assets/images/trashCan.png"/>
+            <span #deletePositionShader class="deletePositionShader"></span>
+          </div>
         </div>
       </mat-sidenav-content>
       <mat-sidenav #detailBar class="detailNavBar"
