--- a/formation-webpage/src/app/app.component.css
+++ b/formation-webpage/src/app/app.component.css
@@ -10,17 +10,34 @@ mat-sidenav-container{
 
 
 .deletePosition{
-  width: 20%;
-  height: 15%;
+  width: 45px;
+  height: 45px;
   position: absolute;
-  bottom: 0;
+  bottom: 2%;
+  margin-left: auto;
+  margin-right: auto;
   left: 50%;
-  margin-left: -10%;
-  margin-right: -10%;
   z-index: 1;
   visibility: hidden;
-  background-color: blue;
 }
+
+.deletePositionShader{
+  width: 66px;
+  height: 66px;
+  position: absolute;
+  bottom: 1%;
+  margin-left: auto;
+  margin-right: auto;
+  left: 47.5%;
+  border-radius: 50%;
+  visibility: hidden;
+  background:rgba(255, 0, 0, 0.25);
+}
+
+/* .deletePositionShader::after {
+  display: block;
+  padding-bottom: 100%;
+} */
 
 .content{
   height: 100vh;
