Updated Slot Mechanic (Again)
Added feature where the slot is auto calculated on any player movement or ball movement.
Also finished validation check, enabling it on full field.

--- a/formation-webpage/src/app/field/field.component.html
+++ b/formation-webpage/src/app/field/field.component.html
@@ -9,11 +9,7 @@
   </div>
   <div class="detailBar">
     <p class="formationName">Enter Formation Name Here</p>
-    <button mat-raised-button #validateButton class="validateButton"
-      disabled
-      (click)="handleValidateButtonPressed()">
-      <p class="validateButtonTitle">Validate</p>
-    </button>
+    <button mat-raised-button #validateButton class="validateButton" disabled (click)="handleValidateButtonPressed()">{{validationButtonTitle}}</button>
     <p class="playName">Enter Play Name Here</p>
   </div>
 </div>
